--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,8 @@
 			<nav id="menu">
 				<ul class="header-nav">
 					<li><a href="http://app.ixxoo.me" target="_blank">App</a></li>
-					<li><a href="https://github.com/likebeta" target="_blank">Github</a></li>
+					<li><a href="{{site.url}}" target="_blank">Blog</a></li>
+					<li><a href="{{site.url}}/categories">Category</a></li>
 					<li{% if page.read %} class="current"{% endif %}><a href="{{site.url}}/read">Read</a></li>
 					<li{% if page.photo %} class="current"{% endif %}><a href="{{site.url}}/photo">Photo</a></li>
 					<li{% if page.about %} class="current"{% endif %}><a href="{{site.url}}/about">About</a></li>
