--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,7 +1,7 @@
     <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'ixxoo'; // required: replace example with your forum shortname
+        var disqus_shortname = 'alfredsun'; // 'ixxoo'; // required: replace example with your forum shortname
         var disqus_url = 'http://blog.ixxoo.me/';
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
