--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -2,7 +2,7 @@
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'alfredsun'; // 'ixxoo'; // required: replace example with your forum shortname
-        var disqus_url = 'http://blog.ixxoo.me/';
+        // var disqus_url = 'http://blog.ixxoo.me/';
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
