--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,16 +16,16 @@ void main()
     <meta name="author" content="{{site.author.name}}" />
 	<meta name="keywords" content="{{page.keywords}}" />
 	<meta name="description" content="{{page.description}}" />
-    <link rel="shortcut icon" href="{{site.url}}./media/img/favicon.ico" />
+    <link rel="shortcut icon" href="./media/img/favicon.ico" />
     <link rel="alternate" title="likebeta" type="application/atom+xml" href="{{site.feed}}" />
-    <link rel="stylesheet" type="text/css" href="{{site.url}}./media/css/style.css" />
-    <link rel="stylesheet" href="{{site.url}}./media/css/highlight.css" />
+    <link rel="stylesheet" type="text/css" href="./media/css/style.css" />
+    <link rel="stylesheet" href="./media/css/highlight.css" />
 	<title>{{page.title}}</title>
 	<!--[if lt IE 9]>
 	<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-    <script type="text/javascript" src="{{site.url}}./media/js/jquery-1.7.1.min.js"></script>
-	<script type="text/javascript" src="{{site.url}}./media/js/base.js"></script>
+    <script type="text/javascript" src="./media/js/jquery-1.7.1.min.js"></script>
+	<script type="text/javascript" src="./media/js/base.js"></script>
   </head>
   <body>
 	<div id="clickload">假装异步加载中...</div>
